--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SECRET_KEY = 'SPEECH'
-URL='http://localhost:7010/public/audios'
+URL='https://speech.aiseller.uz/public/audios'
 # URL='https://speech.admob.uz/public/audios'
